--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <title>RadwebStarterkit</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
