--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=">
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
 </head>
 
 <body>
